--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -18,5 +18,4 @@ jobs:
     - name: Prettify code
       uses: creyD/prettier_action@v3.0
       with:
-        prettier_options: --write **/*.{java,md}
-        dry: true
+        prettier_options: --write **/*.{md}
